--- a/Develop/style.css
+++ b/Develop/style.css
@@ -46,11 +46,11 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: rgb(59, 59, 221);
   color: white;
 }
 
-.submitBtn i:hover {
+.submitBtn:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
