--- a/Develop/style.css
+++ b/Develop/style.css
@@ -52,3 +52,18 @@ body {
   border: 1px solid black;
 }
 
+.cardColor {
+  background-color: rgba(0, 0, 0, .5);
+  color: #fff;
+
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  font-size: 25px;
+  padding: 5px 5px 10px 5px;
+
+}
